style.css
body {
    display:flex;
    flex-direction:column;
    align-items:center;
    justify-content: center;
}

#top {
    margin-bottom:20px;
    text-align:center;
    font-size:3vmin;
}

#calccontainer {
    padding: 48px 24px 40px 22px;
    border-radius:12px;
    background-color: pink;
    width:350px;
    height:600px;
    display:grid;
    grid-template-rows:repeat(6,1fr);
   grid-template-columns: repeat(4,1fr);
   grid-gap:16px;
   font-family:Arial, Helvetica, sans-serif;
}


@media only screen and (max-width: 600px) {
  #calccontainer {
    height:auto;
    width:50%;
    }
}

#display {
    padding:12px;
    height:95px;
    grid-column: 1/span 4;
    grid-row:1;
    background-image: linear-gradient(to bottom, rgb(197, 233, 197), rgb(173, 226, 173));
    display:flex;
    flex-direction:column;
    border-style:inset;
    border-top: 4px solid rgb(148, 192, 148);
    border-right: 4px solid rgb(97, 143, 97);
    border-bottom: 4px solid rgb(148, 192, 148);
    border-left: 4px solid rgb(97, 143, 97);
    margin-bottom:26px;
    justify-content: space-between;
  }

  #userinputdisplay {
    font-size:20px;
    color:rgb(97, 143, 97);
    margin:0px;
    text-align: right;
    line-height:1.2em;
    max-height:2.2em;
    overflow: scroll;
  }

  #resultsdisplay{
    font-size:32px;
    color:red; 
    margin: 0px;
    text-align:right;
    
  }

  #zero {
    grid-column: 1/span 2;
  }

button{
display:grid;
align-items:center;
justify-content: center;
border-radius:5px;
font-size:26px;
color:blue;
/* border-style: solid outset solid solid;
border-color:orange; */
border-style:none;
box-shadow: 2px 2px rgb(236, 138, 82);
/* border: 1px solid red; */
/* background-image: linear-gradient(to bottom, #e4e4e4, #f7f7f7); */
}


.button:active {
    box-shadow: 0 0 rgb(236, 138, 82);
    transform: translate(2px, 2px);
}

.num{
    background-color:rgb(248, 223, 185);
  }

.operatorbtn{
    background-color:rgb(240, 240, 160);
  }

.lightbutton{
  background-color: rgb(240, 232, 218);
}


  #equals{
      background-color:blanchedalmond;
  }




/*   #spacer{
    background-color:rgb(236, 160, 160);
    grid-row:2;
    grid-column:1/span 4;
    padding:0px;
    margin:0px;
    font-size:1vmin;
} */

